changing index.js and adding a default <header> and <footer>

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>solutions-project</title>
+    <header id="header">
+    <span id="logo"><h1>LOGO</h1></span>
+    <blockquote class="quote">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi rem dolorum eum, laudantium in hic obcaecati, dicta ab nostrum fugit dolorem sit sint esse mollitia assumenda libero ipsa eaque nam.</p>
+      <cite>Made with Vue js.</cite>
+    </blockquote>
+  </header>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <footer class="container">
+    <section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur voluptates dignissimos, unde vel optio nam! Neque veritatis, aspernatur sequi est repellat dolores possimus! Beatae provident dolorem, tempore perspiciatis reiciendis soluta?</p>
+    </section>
+    <p>copyrights</p>
+  </footer>
   </body>
 </html>
